# ira-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
cli/: main.cpp
ffi/: CMakeLists.txt
ffi/remote/: CMakeLists.txt  go.mod  server.go
include/: ira_db.h  ira_db.hpp  ira_remotes.hpp
src/: CMakeLists.txt
src/cli/: main.cpp
src/db/: db.cpp
src/remote/: remote.cpp  remote_server.cpp
tests/: CMakeLists.txt  test_ira_db.cpp
tests/db/: test_db_making.cpp
tests/remote/: test_remote_connecting.cpp
